Part of bug 190336 - makes nsFileSpec use base64 encoded aliases for persistent descriptor - as does nsILocalFile and nsFileSpec in CFM build. Patch by sfraser, r=ccarlen/sr=sspitzer